reformulate CAP validation intro

--- a/body.tex
+++ b/body.tex
@@ -358,7 +358,7 @@ quasiparticle (i.e., the width of the Lorentzian peak).
 \subsection{\ac{CAP} Validation}
 \label{subsec:SingleParticle}
 
-As a validation of the \ac{CAP} approach, we first consider if
+As a validation of our approach, we first consider if
 the \ac{CAP} as generated according to the method given in
 section~\ref{subsec:CAP} results in the correct complex single-particle
 eigenvalues.
