two slight modifications

--- a/body.tex
+++ b/body.tex
@@ -373,7 +373,7 @@ The agreement between the Green function transmission (red) and the peaks
 derived from the eigenvalues of $\um{H}_0 + \um{W}$ (green) is excellent,
 both in terms of position (real part) and width (imaginary part). In the inset,
 the region around the \ac{HOMO} is plotted in detail, showing the extent of
-the agreement between the two methods (the green and red curves effectively
+the agreement between the two approaches (the green and red curves effectively
 overlap for the energy scales we will consider).
 
 \begin{figure} 
@@ -461,7 +461,7 @@ in these plots is the large width for the \ac{LUMO} peak at the
 ``device region'' singles level for the 4.0A system
 (figure~\ref{fig:nobranch40A}). This can be directly related to the fact that
 the $N+1$-electron state in this case has two dominant \acp{CSF}, one of which
-is a lead state, whereas in the ``device region'' CI singles case (and also in
+is a lead state, whereas in the ``molecule'' CI singles case (and also in
 both cases for the 4.5A system) the $N+1$-electron state has only one dominant
 \ac{CSF}, namely the one with the added electron in the device \ac{LUMO}.
 
