slight expansion of temp.tex

--- a/temp.tex
+++ b/temp.tex
@@ -37,5 +37,11 @@ which represent excitations from and to orbitals localized on the molecule.
 Lead excitations have been previously shown to have significant effects
 on current flow through two-level model systems
 \cite{galperin_nitzan2006leadexcitations}. 
+The first notable feature is found in the CI singles case, where the
+\ac{LUMO} peak is much broader than all other peaks studied. This can
+be directly related to the fact that the $N+1$-electron contains two
+(instead of one) significant CSFs, one of which has the extra electron
+in a lead orbital. However, upon including more CSFs in the mcci procedure,
+
 
 then device region
