elaborate caption of fig:transdat

--- a/body.tex
+++ b/body.tex
@@ -270,8 +270,8 @@ particular, good agreement is achieved on the energy range around the
 	\end{center}
 	\caption{Transmission through the 0.45 nm (top) and 0.40 nm (bottom)
 	         systems. The red curve is a transmission spectrum obtained
-		 using a conventional self-energy, the green curve is obtained
-		 using a \ac{CAP}.}
+		 using a conventional electrode self-energy, the green curve
+		 is obtained using a \ac{CAP}.}
 	\label{fig:transdat}
 \end{figure}
 
