add Jim's improvements to paper.tex; Jim to J.C. and change title

--- a/paper.tex
+++ b/paper.tex
@@ -12,9 +12,8 @@
 \usepackage{acronym}
 \usepackage{cite}
 
-\author{Mark Szepieniec, Irene Yeriskin, Jim Greer}
-\title{Influence of Electron Correlation on Single Particle State Energies and
-       Lifetimes in an Atomic Chain Model of a Tunnel Junction}
+\author{Mark Szepieniec, Irene Yeriskin, J.C. Greer}
+\title{Quasiparticle Energies and Lifetimes in a Metallic Chain Model of A Tunnel Junction}
 
 \input{acronyms}
 
