massive changes, due to Jim's rewrite.
expanded analysis, conclusion, updated figures, abbreviated
journal titles, incorporated IOP class files, ignore latexmk's
files and many other changes.

--- a/paper.tex
+++ b/paper.tex
@@ -2,22 +2,22 @@
 %     Created: Tue Feb 21 05:00  2012 G
 % Last Change: Tue Feb 21 05:00  2012 G
 %
-\documentclass[a4paper]{article}
+\documentclass[12pt]{iopart}
 %\documentclass[a4paper, twocolumn]{article}
 
-\usepackage{amsmath}
+%\usepackage{amsmath}
 \usepackage{amsfonts}
 \usepackage{subfig}
 \usepackage{graphicx}
 \usepackage{acronym}
 \usepackage{cite}
 
+\begin{document}
 \author{Mark Szepieniec, Irene Yeriskin, J.C. Greer}
 \title{Quasiparticle Energies and Lifetimes in a Metallic Chain Model of A Tunnel Junction}
 
 \input{acronyms}
 
-\begin{document}
 \maketitle
 
 \newcommand{\um}[1]{\mathbf{#1}}
